# gitlane

./: .gitattributes  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  path.rs
crates/cli/tests/: init.rs
crates/core/: Cargo.toml
crates/core/src/: codec.rs  config.rs  error.rs  errors.rs  frontmatter.rs  fs.rs  gitlane.rs  init.rs  lib.rs  paths.rs  project.rs  service.rs  validate.rs  workflow.rs
crates/core/src/init/: mod.rs
crates/core/src/init/scaffold/issues/: issues.toml  labels.toml  workflow.toml
crates/core/src/issues/: mod.rs  templates.rs
crates/core/src/issues/config/: mod.rs  repr.rs  templates.rs  toml.rs  yaml.rs
crates/core/src/issues/issue/: mod.rs  repr.rs
crates/core/src/issues/labels/: mod.rs  repr.rs  templates.rs  toml.rs  yaml.rs
crates/core/src/issues/workflow/: mod.rs  repr.rs  templates.rs  toml.rs  yaml.rs
crates/core/src/project/: mod.rs  repr.rs  toml.rs  yaml.rs
docs/: cli.md  issues.md  labels.md  project.md  workflow.md
docs/issues/: issues.md  labels.md  workflow.md
