[workspace]
members = ["crates/core", "crates/cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chapiteau-team/gitlane"

[workspace.dependencies]
anyhow = "1.0.102"
assert_cmd = "2.0.17"
clap = { version = "4.6.1", features = ["derive"] }
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
toml = "1.1.2"
toml_edit = { version = "0.25.11", features = ["serde"] }
