[package]
name = "gitlane-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "gitlane"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
gitlane = { path = "../core", version = "0.1.0" }

[dev-dependencies]
tempfile = { workspace = true }
